--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     
     <section
       style="
-        background-image: url(./images/edwin-andrade-4V1dC_eoCwg-unsplash\ 1.jpg); 
+        background-image: url(./images/bg.jpg); 
     clip-path: ellipse(100% 100% at 50% 0%);
       "
       class="h-[715px] w-full  object-cover  bg-cover "
